# SkyWatch-fork

./: DISTRIBUTION.md  QUICKSTART.md  README.md  SETUP.md  pyproject.toml  requirements.txt
skywatch/: __init__.py
skywatch/adsb/: native.py
skywatch/remoteid/: __init__.py  ble.py  ble_hci.py  remoteid.py
skywatch/web/: manager.py  server.py
skywatch/web/static/: index.html
skywatch/web/static/css/: style.css
skywatch/web/static/js/: app.js
tools/win64/: rtl8761bu_firmware.README
